- General:
	- Fix Krakensbane adjustments when the active vessel dies.
	- Make sure various pooled objects are disabled when leaving the flight scene.
	- Battle damage fuel leak rates now scale by (bullet caliber)^2, instead of (bullet caliber). Fuel leak rates for 20mm caliber remain the same, calibers higher and lower than 20mm will now have higher and lower leak rates, respectively.
- UI:
	- Fix part filtering by search terms in the editors.
	- Adjust timing and conditions for auto-camera switching to and away from missiles.
	- Fix tracer visuals when the active vessel dies.
	- New Opacity option in BDA Team Icons to set icon opacity.
	- Adds CASE ammo explosion radii visualizer, enable via F3.
	- Continuous Spawn now shows lives remaining in the Vessel Switcher GUI.
	- Add a UI scaling option for BDA's windows.
	- Improve the logarithmic scaling in the radar windows.
	- Add a 'withZero' parameter to semi-log sliders that allows them to include 0 and uses lower precision for the smallest range.
	- Add a 'GUIUtils.HorizontalSemiLogSlider' for simplifying horizontal sliders for semi-log float ranges outside of PAWs.
- AI / WM:
	- Add new "Kinematic Msl Evasion" toggle to Pilot AI under the evasion settings. When this is enabled the AI will evaluate the best maneuver to defeat a beyond-visual-range (BVR) missile using only kinematic maneuvers. The Time to Impact Before Evade setting on the weapons manager should be set to a high value when this evasion option is enabled. Maneuvers the AI will use are:
		- Crank - Fly at an angle to the target, while still maintaining radar lock.
		- Beam/Notch - Fly perpendicular to the missile.
		- Turn away/Turn cold - Fly away from the missile.
		- Notch & dive - This is the standard AI behavior if this toggle is disabled. It is also used if the toggle is enabled and the AI is within lethal range of the missile.
	- Invert the roll target when the fly-to direction is below and behind the craft within the Immelmann turn angle.